fixed content overlapping header and footer in prawn reports

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -34,6 +34,16 @@ div.tag_symbol:hover span.alt {
   font-size: 10px;
 }
 
+tr .overline {
+    border-top-style: solid;
+    border-width: 1px
+}
+
+tr .underline {
+    border-bottom-style: solid;
+    border-width: 1px
+}
+
 h3.compact {
     margin-bottom:6px;
     margin-top:10px
